# SimPol

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  environment.yml  linux_setup.sh  simPol.cpp
data/k50ksd25kmin17kmax200l1950a0.1b1z2000zsd1000zmin1500zmax2500t40n20000s33h17/: combined_cell_data.csv
data/k50ksd25kmin17kmax200l1950a1b1z2000zsd1000zmin1500zmax2500t40n20000s33h17/: combined_cell_data.csv
scripts/: sample_read_counts.Rmd  sample_read_counts.html
